--- a/projects/process_file_in_chunks/README
+++ b/projects/process_file_in_chunks/README
@@ -84,7 +84,7 @@ scripts {
                 $ ./configure && make && make check
                 $ sudo make install
                 Huh.  Text::CSV::LibCSV is a thing.  It's on cpan.
-            I have more notes in libcsv's README.
+            I have more notes in ROOT/modules/NativeCall/README
 
         BUT, while we're "being fair", remember that the fastest p6 version 
         listed is using multiple threads for output, while the p5 version is a 
