--- a/tutorials_blogs/zoffix/workshops/weatherapp/README
+++ b/tutorials_blogs/zoffix/workshops/weatherapp/README
@@ -1,6 +1,12 @@
 
 Waiting on part 4
 
+08/24/2016, Zoffix posted this to twitter:
+    Since some are asking: I stopped my "Weather App" article series because I 
+    wasn't having fun writing them. Sorry :) 
+
+Well, shit.
+
 
 Part I {#{{{
     http://perl6.party/post/Perl-6-Hands-On-Workshop--Weatherapp--Part-1
